Adjusting parameters to improve the arguments

--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
   <title>JS Elements</title>
 </head>
 <body>
-
 </body>
 </html>
 
-<script src="JSElements.js" type="module"></script>
-<script src="index.js" type="module"></script>
+<script src="./JSElements.js" type="module"></script>
+<script src="./index.js" type="module"></script>
