Adjusting the main page style

--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>JS Elements</title>
+
+  <script>
+    var timeStart = performance.now();
+  </script>
 </head>
 <body>
 </body>
 </html>
 
-<script src="./JSElements.js" type="module"></script>
-<script src="./index.js" type="module"></script>
+
+<script src="./assets/JSElements.js" type="module"></script>
+<script src="./assets/index.js" type="module"></script>
