--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="google-site-verification" content="2untgSm0_2ZeIJ6U9cGTPDioqLe5sjPWAhwCwrqYSSM" />
 
   <script>
     var timeStart = performance.now();
