--- a/index.html
+++ b/index.html
@@ -1,263 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JS Elements - 2KB JavaScript Framework</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            color: #333;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 1rem;
-            text-align: center;
-        }
-        header h1 {
-            margin: 0;
-            font-size: 2.5rem;
-        }
-        header p {
-            margin: 0;
-            font-size: 1.2rem;
-        }
-        .container {
-            width: 80%;
-            margin: auto;
-            overflow: hidden;
-        }
-        h2 {
-            color: #444;
-        }
-        pre {
-            background: #eee;
-            border: 1px solid #ddd;
-            padding: 1rem;
-            border-radius: 4px;
-            overflow-x: auto;
-        }
-        code {
-            background: #f4f4f4;
-            border-radius: 4px;
-            padding: 0.2rem;
-            font-family: monospace;
-        }
-        section {
-            padding: 1rem;
-            margin-bottom: 2rem;
-            background: #fff;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        a {
-            color: #007bff;
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-        .examples {
-            display: grid;
-            gap: 1rem;
-        }
-        .example {
-            background: #fff;
-            padding: 1rem;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        .example h3 {
-            margin-top: 0;
-        }
-        .example pre {
-            margin: 0;
-        }
-        footer {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 1rem;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="google-site-verification" content="2untgSm0_2ZeIJ6U9cGTPDioqLe5sjPWAhwCwrqYSSM" />
 </head>
 <body>
-    <header>
-        <div class="container">
-            <h1>JS <strong>Elements</strong></h1>
-            <p>2KB JavaScript Framework</p>
-        </div>
-    </header>
-
-    <div class="container">
-        <section>
-            <h2>🚀 Getting Started</h2>
-            <p>To get started with JS Elements, include the framework in your HTML file:</p>
-            <pre><code>&lt;script src="./assets/index.js" type="module"&gt;&lt;/script&gt;</code></pre>
-            <p>Then, start crafting your web masterpiece:</p>
-            <pre><code>render(
-  section(
-    h1('Hello World')
-  )
-);</code></pre>
-            <p>✨ That's it! Your "Hello World" is live and kicking!</p>
-        </section>
-
-        <section>
-            <h2>🎨 Setting Tag Properties</h2>
-            <p>JS Elements gives you the flexibility to set properties with style and grace. The order doesn't matter – just focus on making it look good!</p>
-            <pre><code>div(
-  {
-    id: 'item_1',
-    class: 'item',
-    'aria-label': 'First item'
-  },
-  'First item'
-),
-
-// -- Properties, meet your match --
-div(
-  'Second item',
-  {
-    id: 'item_2',
-    class: 'item',
-    'aria-label': 'Second item'
-  }
-)</code></pre>
-        </section>
-
-        <section>
-            <h2>🛠 Creating Your Own Component</h2>
-            <p>Unleash your creativity by crafting reusable components. Here's how you can create and use your own awesome components with JS Elements:</p>
-            <pre><code>let myAwesomeComponent = (content) => {
-  return div(
-    'My content is',
-    content
-  );
-}
-
-// Using the component
-render(
-  myAwesomeComponent('First Content'),
-  myAwesomeComponent('Second Content')
-);</code></pre>
-            <p>🌈 Voila! Your custom component is now part of your web experience.</p>
-        </section>
-
-        <section>
-            <h2>🎉 Fun and Creative Examples</h2>
-            <div class="examples">
-                <div class="example">
-                    <h3>📅 Creating a Dynamic Calendar</h3>
-                    <pre><code>let createCalendar = (month, year) => {
-  let days = new Date(year, month, 0).getDate();
-  let calendar = [];
-
-  for (let day = 1; day <= days; day++) {
-    calendar.push(div({ class: 'day' }, day));
-  }
-
-  return section({ class: 'calendar' }, ...calendar);
-}
-
-// Render the calendar for July 2024
-render(
-  createCalendar(7, 2024)
-);</code></pre>
-                </div>
-                <div class="example">
-                    <h3>🍔 Building a Fancy Menu</h3>
-                    <pre><code>let createMenuItem = (name, price) => {
-  return div(
-    { class: 'menu-item' },
-    span({ class: 'item-name' }, name),
-    span({ class: 'item-price' }, `$${price.toFixed(2)}`)
-  );
-}
-
-let createMenu = (items) => {
-  return section(
-    { class: 'menu' },
-    ...items.map(item => createMenuItem(item.name, item.price))
-  );
-}
-
-let menuItems = [
-  { name: 'Burger', price: 5.99 },
-  { name: 'Fries', price: 2.99 },
-  { name: 'Shake', price: 3.99 }
-];
-
-// Render the menu
-render(
-  createMenu(menuItems)
-);</code></pre>
-                </div>
-                <div class="example">
-                    <h3>🎨 Crafting a Colorful Card</h3>
-                    <pre><code>let createCard = (title, content, color) => {
-  return div(
-    { class: 'card', style: \`border-left: 5px solid ${color};\` },
-    h2({ class: 'card-title' }, title),
-    p({ class: 'card-content' }, content)
-  );
-}
-
-// Render colorful cards
-render(
-  createCard('Welcome', 'This is a welcome card.', '#4CAF50'),
-  createCard('Info', 'This is an info card.', '#2196F3'),
-  createCard('Warning', 'This is a warning card.', '#FF9800')
-);</code></pre>
-                </div>
-            </div>
-        </section>
-
-        <section>
-            <h2>🌐 Why JS Elements?</h2>
-            <ul>
-                <li><strong>Ultra-Lightweight:</strong> Only 2KB – keep your projects fast and efficient.</li>
-                <li><strong>Flexible:</strong> Easily manage tag properties and components.</li>
-                <li><strong>Elegant:</strong> Clean, readable, and maintainable code.</li>
-                <li><strong>Modern:</strong> Embrace the latest JavaScript features and practices.</li>
-            </ul>
-        </section>
-
-        <section>
-            <h2>🧩 Explore More Features</h2>
-            <p><strong>📦 Lightweight and Fast</strong><br>JS Elements is designed to be as lightweight as possible, making your web applications lightning fast without sacrificing functionality.</p>
-            <p><strong>🌟 Intuitive API</strong><br>With an intuitive and straightforward API, you'll be up and running in no time. No steep learning curves, just pure productivity.</p>
-            <p><strong>📚 Extensive Documentation</strong><br>Check out our <a href="https://example.com/docs">documentation</a> for a comprehensive guide to all features and capabilities. From beginner tutorials to advanced techniques, we've got you covered.</p>
-        </section>
-
-        <section>
-            <h2>🌟 Community and Support</h2>
-            <p>Join our growing community of developers! Share your projects, ask questions, and collaborate with others:</p>
-            <ul>
-                <li><a href="https://github.com/your-repo/discussions">GitHub Discussions</a></li>
-                <li><a href="https://stackoverflow.com/tag/js-elements">Stack Overflow</a></li>
-                <li><a href="https://discord.com/invite/your-invite-code">Discord</a></li>
-            </ul>
-        </section>
-
-        <section>
-            <h2>📄 License</h2>
-            <p>This project is licensed under the MIT License. For more information, please refer to the <a href="https://opensource.org/licenses/MIT">MIT License</a>.</p>
-        </section>
-    </div>
-
-    <footer>
-        <div class="container">
-            <p>&copy; 2024 JS Elements. All rights reserved.</p>
-        </div>
-    </footer>
 </body>
 </html>
+
+<script src="./assets/index.js" type="module"></script>
